--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f8ff2be
-	base = 81a465e
+	base = aeebaf0
 	trim = point_cloud_msg_wrapper
-	trimbase = 
+	trimbase = 81a465e
