--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f8ff2be
-	base = 575ab28
+	base = 38c34d6
 	trim = point_cloud_msg_wrapper
-	trimbase = 
+	trimbase = 575ab28
