--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/point_cloud_msg_wrapper
-	previous = 
-	base = 581a84e
+	previous = 581a84e
+	base = 254561e
 	trim = 
 	trimbase = 
